# dna

./: .editorconfig  .gitignore  .vale.ini  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.nix  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml
apibara/: CHANGELOG.md  Cargo.toml  build.rs
apibara/src/: block.rs  chain.rs  configuration.rs  error.rs  ethereum.rs  head.rs  indexer.rs  lib.rs  network_manager.rs  server.rs  starknet.rs
apibara/src/application/: mod.rs  persistence.rs  server.rs
apibara/src/chain/: block_events.rs  ethereum.rs  filter.rs  mod.rs  provider.rs  starknet.rs  types.rs
apibara/src/ethereum/: block.rs  chain.rs  error.rs  mod.rs
apibara/src/head_tracker/: mod.rs
apibara/src/indexer/: manager.rs  mod.rs  persistence.rs  service.rs
apibara/src/persistence/: mod.rs  mongo.rs
apibara/src/server/: application_service.rs  indexer_service.rs  mod.rs
beaconchain/: Cargo.toml
beaconchain/api-playground/: blob_sidecars.bru  blocks.bru  bruno.json  debug_state.bru  node_version.bru  validator_balances.bru  validators.bru
beaconchain/api-playground/environments/: local.bru  prysm.bru
beaconchain/api-playground/headers/: by_root.bru  by_slot.bru  finalized.bru  head.bru
beaconchain/src/: bin.rs  error.rs  fragment.rs  ingestion.rs  lib.rs  proto.rs  segment.rs
beaconchain/src/cli/: common.rs  ingestion.rs  mod.rs  rpc.rs  start.rs
beaconchain/src/filter/: blob.rs  mod.rs  transaction.rs  validator.rs
beaconchain/src/ingestion/: block.rs  (+7 more)
benchmark/: Cargo.toml
benchmark/src/: bin.rs  lib.rs
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/examples/: configuration.toml
cli/src/: admin.rs  bench.rs  debug_data.rs  dev.rs  error.rs  http_client.rs  main.rs  paths.rs  plugins.rs  push.rs  remote.rs  run.rs
common/: Cargo.toml
common/benches/: index.rs
common/object_store/: Cargo.toml
common/src/: block_store.rs  chain.rs  chain_store.rs  chain_view.rs  cli.rs  core.rs  error.rs  etcd.rs  file_cache.rs  fragment.rs  index.rs  ingestion.rs  join.rs  lib.rs  object_store.rs  options_store.rs  query.rs  rkyv.rs  segment.rs
common/tests/: test_ingestion_service.rs  test_object_store.rs  test_storage_azure.rs
core/: Cargo.toml  README.md  build.rs
core/proto/: application.proto  node.proto
core/src/: bytes.rs  filter.rs  lib.rs  node.rs  quota.rs  stream.rs
erigon_dna/: Cargo.toml  build.rs
erigon_dna/proto/: ethbackend.proto  kv.proto  types.proto
erigon_dna/src/: access.rs  bin.rs  lib.rs  proto.rs
erigon_dna/tests/: snapshot_decoder.rs  snapshot_index.rs
etcd/: Cargo.toml
etcd-dbg/: Cargo.toml
etcd-dbg/src/: main.rs
etcd/src/: client.rs  kv.rs  lib.rs  lock.rs  utils.rs  watch.rs
evm/: Cargo.toml
evm/schema/: store.fbs
evm/src/: bin.rs  error.rs  fragment.rs  ingestion.rs  lib.rs  proto.rs
node/: Cargo.toml  README.md
node/src/: application.rs  bin.rs  chain_tracker.rs  core.rs  head_tracker.rs  input.rs  lib.rs  message.rs  message_storage.rs  message_stream.rs  node.rs  o11y.rs  otel.rs  processor.rs  reflection.rs  sequencer.rs  server.rs
observability/: Cargo.toml  README.md
observability/src/: dna_fmt.rs  lib.rs  request.rs
operator/: CHANGELOG.md  Cargo.toml
operator/examples/: README.md  apikey.yaml  config.yaml  console.yml  webhook.yaml
operator/src/: bin.rs  configuration.rs  context.rs  controller.rs  crd.rs  error.rs  lib.rs  reconcile.rs
operator/tests/: test_controller.rs
protocol/: Cargo.toml  README.md  build.rs
protocol/src/: beaconchain.rs  dna.rs  error.rs  evm.rs  helpers.rs  lib.rs  starknet.rs
sdk/: Cargo.toml  README.md  build.rs
sdk/examples/: starknet.rs
sdk/src/: auth.rs  builder.rs  client.rs  config.rs  configuration.rs  interceptor.rs  lib.rs  request.rs  starknet.rs
sdk/tests/: test_sdk.rs
sink-common/: Cargo.toml  README.md  build.rs
sink-common/examples/: flatten.js  identity.js  starknet-decode-events.js  starknet-filter.json
sink-common/src/: cli.rs  configuration.rs  connector.rs  error.rs  json.rs  lib.rs  persistence.rs  status.rs
sink-common/tests/: test_etcd_persistence.rs
sink-console/: CHANGELOG.md  Cargo.toml  README.md
sink-console/src/: bin.rs  configuration.rs  sink.rs
sink-mongo/: CHANGELOG.md  Cargo.toml  README.md
sink-mongo/src/: bin.rs  configuration.rs  lib.rs  sink.rs
sink-mongo/tests/: test_sink.rs
sink-options-derive-tests/: Cargo.toml
sink-options-derive-tests/tests/: test_derive.rs
sink-parquet/: CHANGELOG.md  Cargo.toml  README.md  notes.md
sink-parquet/src/: bin.rs  configuration.rs  lib.rs  sink.rs
sink-parquet/tests/: test_sink.rs
sink-postgres/: CHANGELOG.md  Cargo.toml  README.md
sink-postgres/src/: bin.rs  configuration.rs  lib.rs  sink.rs
sink-postgres/tests/: test_sink.rs
sink-webhook/: CHANGELOG.md  Cargo.toml  README.md
sink-webhook/src/: bin.rs  configuration.rs  lib.rs  sink.rs
sink-webhook/tests/: test_sink.rs
starknet/: CHANGELOG.md  Cargo.toml  README.md  build.rs
starknet-rpc/: Cargo.toml
starknet-rpc/src/: lib.rs
starknet/proto/: starknet.proto
starknet/schema/: store.fbs
starknet/src/: bin.rs  block_builder.rs  block_ingestion.rs  chain_tracker.rs  configuration.json  core.rs  db.rs  error.rs  filter.rs  fragment.rs  head.rs  head_tracker.rs  healer.rs  health_reporter.rs  ingestion.rs  lib.rs  node.rs  proto.rs  provider.rs  server.rs  state.rs  status.rs  status_reporter.rs  storage.rs  websocket.rs
starknet/tests/: integration_test.rs  test_node.rs  test_reorgs.rs  test_store_conversion.rs  test_websockets.rs
transformer/: Cargo.toml  README.md
transformer/src/: env.js  lib.rs  module_loader.rs  transformer.rs
transformer/tests/: test_transformer.rs
wings/: Cargo.toml
wings/src/: dev.rs  error.rs  push.rs
wings_ingestor_core/: Cargo.toml
wings_ingestor_core/src/: error.rs  ingestor.rs  test_utils.rs  types.rs  uploader.rs
wings_metadata_core/: Cargo.toml
wings_metadata_core/src/: cache.rs  lib.rs  protocol.rs  resource.rs
wings_object_store/: Cargo.toml
wings_object_store/src/: local.rs
(+823 files in other folders)
