[workspace.package]
edition = "2024"
authors = ["Francesco Ceccon", "The Wings contributors"]
repository = "https://github.com/apibara/dna"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = ["metadata/core"]

[profile.maxperf]
inherits = "release"
codegen-units = 1
lto = "fat"
incremental = false

[workspace.dependencies]
alloy = "1.0.16"
async-trait = "0.1.85"
clap = { version = "4.5.40", features = [
    "derive",
    "env",
    "cargo",
    "unicode",
    "color",
    "unstable-styles",
] }
ctrlc = { version = "3.4.7", features = ["termination"] }
error-stack = "0.5.0"
paste = "1.0.15"
prost = "0.13.5"
prost-types = "0.13.5"
thiserror = "2.0.7"
tonic = "0.13.1"
tonic-build = "0.13.1"
tokio = { version = "1.45.1", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.15"
