[workspace.package]
edition = "2021"
authors = ["Francesco Ceccon", "The Apibara contributors"]
repository = "https://github.com/apibara/dna"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = [
    "observability",
    "etcd",
    "etcd-dbg",
    "protocol",
    "common",
    "benchmark",
    "sdk",
    # Chains
    "beaconchain",
    "evm",
    "starknet",
]

[profile.maxperf]
inherits = "release"
codegen-units = 1
lto = "fat"
incremental = false

[workspace.dependencies]
alloy-consensus = { version = "2.0.0", features = ["k256"] }
alloy-eips = "2.0.0"
alloy-rpc-client = "2.0.0"
alloy-primitives = "0.8"
alloy-provider = { version = "2.0.0", features = ["trace-api"] }
alloy-rpc-types = "2.0.0"
alloy-rpc-types-trace = "2.0.0"
alloy-rpc-types-beacon = "2.0.0"
alloy-transport = "2.0.0"
alloy-transport-http = "2.0.0"
backon = { version = "1.6.0", features = ["std", "tokio-sleep"] }
bytes = { version = "1.11.1", features = ["serde"] }
byte-unit = "5.2.0"
clap = { version = "4.6.0", features = [
    "derive",
    "env",
    "cargo",
    "unicode",
    "color",
    "unstable-styles",
] }
ctrlc = { version = "3.5.2", features = ["termination"] }
dirs = "5.0.1"
duration-str = "0.12.0"
error-stack = "0.5.0"
etcd-client = { version = "0.14.1", features = ["tls", "tls-roots"] }
foyer = { version = "0.14.1" }
futures = "0.3.32"
futures-buffered = "0.2.13"
futures-util = "0.3.32"
hex = { version = "0.4.3", features = ["serde"] }
memmap2 = "0.9.10"
mimalloc = "0.1.48"
mixtrics = { version = "0.0.3", features = ["opentelemetry"] }
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = [
    "trace",
    "metrics",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.27", features = [
    "trace",
    "metrics",
    "grpc-tonic",
] }
pin-project = "1.1.11"
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rkyv = { version = "0.8.15", features = ["unaligned"] }
roaring = "0.10.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
snafu = "0.8.9"
tempfile = "3.27.0"
tempdir = "0.3.7"
testcontainers = "0.22.0"
time = { version = "0.3.47", features = ["formatting", "local-offset"] }
tokio = { version = "1.52", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync", "net"] }
tokio-util = "0.7.18"
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "tls-native-roots",
    "prost",
] }
tonic-build = "0.12.3"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tracing = { version = "0.1.44", features = [
    "max_level_trace",
    "release_max_level_debug",
    "valuable",
] }
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3.23", features = [
    "std",
    "env-filter",
    "json",
] }
valuable = "0.1"
url = "2.5"
zstd = "0.13.3"
