[package]
name = "apibara"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
anyhow = "1.0"
chrono = "0.4.19"
ethers = { version = "0.6.2", features = ["ws"] }
futures = "0.3.21"
hex = "0.4.3"
itertools = "0.10.3"
once_cell = "1.12"
prost = "0.10"
regex = "1.5"
starknet = "0.2.0"
starknet-rpc = { path = "../starknet-rpc" }
tonic = "0.7"
tokio-stream = "0.1.8"
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1.34"

[build-dependencies]
tonic-build = "0.7"