[package]
name = "apibara"
version = "0.3.1"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
async-recursion = "1.0.0"
anyhow = "1.0"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.19"
ethers = { version = "0.6.2", features = ["ws", "openssl"] }
figment = { version = "0.10.6", features = ["toml"] }
futures = "0.3.21"
hex = "0.4.3"
itertools = "0.10.3"
mongodb = { version = "2.2.2", features = ["tokio-runtime"] }
once_cell = "1.12"
prost = "0.10"
prost-types = "0.10"
regex = "1.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "23d1747c4aea084cc3726707edb11007b37e8433" }
tonic = "0.7"
tokio-stream = "0.1.8"
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1.34"
url = "2.2.2"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.11.1"

[build-dependencies]
built = "0.5"
tonic-build = "0.7"