[package]
name = "apibara-dna-beaconchain"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_beaconchain"
path = "src/lib.rs"

[[bin]]
name = "apibara-dna-beaconchain"
path = "src/bin.rs"

[dependencies]
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus = { version = "0.2.1", features = ["k256"] }
alloy-rpc-types-beacon = "0.2.1"
apibara-observability = { path = "../observability" }
apibara-dna-common = { path = "../common" }
apibara-dna-protocol = { path = "../protocol" }
byte-unit.workspace = true
clap.workspace = true
error-stack.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
roaring.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
