[package]
name = "wings"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "wings"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
error-stack = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde_json = "1.0"
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-reflection.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
wings-metadata-core = { path = "../metadata/core" }
wings-object-store = { path = "../common/object_store" }
wings-ingestor-core = { path = "../ingestor/core" }
wings-ingestor-http = { path = "../ingestor/http" }
