[package]
name = "apibara-dna-common"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_common"
path = "src/lib.rs"

[dependencies]
apibara-etcd = { path = "../etcd" }
apibara-observability = { path = "../observability" }
apibara-dna-protocol = { path = "../protocol" }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.47.0"
bytes.workspace = true
byte-unit.workspace = true
clap.workspace = true
dirs.workspace = true
error-stack.workspace = true
etcd-client.workspace = true
futures.workspace = true
hex.workspace = true
memmap2.workspace = true
moka.workspace = true
prost.workspace = true
rkyv.workspace = true
roaring.workspace = true
testcontainers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
crc32fast = "1.4.2"

[dev-dependencies]
tempdir.workspace = true
testcontainers.workspace = true
