[package]
name = "apibara-dna-common"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
apibara-etcd = { path = "../etcd" }
apibara-observability = { path = "../observability" }
apibara-dna-protocol = { path = "../protocol" }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.47.0"
azure_identity = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_core = "0.21.0"
bytes.workspace = true
byte-unit.workspace = true
clap.workspace = true
crc32fast = "1.4.2"
dirs.workspace = true
duration-str.workspace = true
error-stack.workspace = true
etcd-client.workspace = true
foyer.workspace = true
futures.workspace = true
futures-buffered.workspace = true
futures-util.workspace = true
hex.workspace = true
memmap2.workspace = true
pin-project.workspace = true
prost.workspace = true
rkyv.workspace = true
roaring.workspace = true
sha2 = "0.10.8"
testcontainers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
valuable.workspace = true
zstd.workspace = true

[dev-dependencies]
alloy-rpc-client.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tempdir.workspace = true
url.workspace = true
