[package]
name = "apibara-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["ethereum", "starknet"]
starknet = ["dep:starknet"]
ethereum = ["dep:reth-primitives"]

[dependencies]
anyhow = "1.0.66"
hex = { version = "0.4.3", features = ["serde"] }
pbjson = "0.5.1"
pbjson-types = "0.5.1"
prost = "0.11.0"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "139c0c45", optional = true }
serde = "1.0.155"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "ca077d3104e11a59d873f79e6090f0ec8cb3fc58", optional = true }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tonic = "0.8.0"
tracing = "0.1.36"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.94"

[build-dependencies]
pbjson-build = "0.5.1"
tonic-build = "0.8.0"
