[package]
name = "apibara-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
pbjson.workspace = true
pbjson-types.workspace = true
prost.workspace = true
serde.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
serde_json.workspace = true

[build-dependencies]
pbjson-build.workspace = true
tonic-build.workspace = true
