[package]
name = "apibara-etcd"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
error-stack.workspace = true
etcd-client.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
