[package]
name = "apibara-dna-evm"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_evm"
path = "src/lib.rs"

[[bin]]
name = "apibara-dna-evm"
path = "src/bin.rs"

[dependencies]
alloy-rpc-client = "0.3.6"
alloy-provider = "0.3.6"
alloy-primitives.workspace = true
alloy-rpc-types = "0.3.6"
alloy-transport = "0.3.6"
apibara-observability = { path = "../observability" }
apibara-dna-common = { path = "../common" }
apibara-dna-protocol = { path = "../protocol" }
byte-unit.workspace = true
clap.workspace = true
ctrlc.workspace = true
error-stack.workspace = true
futures.workspace = true
hex.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
roaring.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
