[package]
name = "apibara-dna-evm"
version = "2.0.0-beta.12"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_evm"
path = "src/lib.rs"

[[bin]]
name = "apibara-dna-evm"
path = "src/bin.rs"

[dependencies]
alloy-rpc-client.workspace = true
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
apibara-observability = { path = "../observability" }
apibara-dna-common = { path = "../common" }
apibara-dna-protocol = { path = "../protocol" }
byte-unit.workspace = true
clap.workspace = true
ctrlc.workspace = true
error-stack.workspace = true
futures.workspace = true
hex.workspace = true
mimalloc.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
roaring.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
