[package]
name = "apibara-node"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_node"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
arrayvec = "0.7.2"
async-trait = { workspace = true }
byte-unit = "4.0.14"
byteorder = { workspace = true }
clap = { workspace = true }
dirs = "4.0.0"
futures = { workspace = true }
lazy_static = { workspace = true }
libmdbx = "0.1.7"
pin-project = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = "0.7.0"
tonic-reflection = { version = "0.5.0", path = "../tonic-reflection-patched" }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.3.0"
