[package]
name = "apibara-node"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_node"
path = "src/lib.rs"

[dependencies]
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
arrayvec.workspace = true
async-stream.workspace = true
async-trait.workspace = true
byte-unit.workspace = true
byteorder.workspace = true
dirs.workspace = true
futures.workspace = true
hyper.workspace = true
lazy_static.workspace = true
libmdbx = "0.1.7"
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
pin-project.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tempfile.workspace = true
