[package]
name = "apibara-observability"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
error-stack.workspace = true
fastrace.workspace = true
fastrace-opentelemetry.workspace = true
nu-ansi-term = "0.50.1"
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
time.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
