[package]
name = "apibara-operator"
version = "0.2.1"
edition.workspace = true

[lib]
name = "apibara_operator"
path = "src/lib.rs"

[[bin]]
name = "apibara-operator"
path = "src/bin.rs"

[features]
default = ["operator"]
operator = []

[dependencies]
apibara-observability = { path = "../observability" }
error-stack.workspace = true
clap.workspace = true
ctrlc.workspace = true
futures.workspace = true
k8s-openapi = { version = "0.18.0", features = ["v1_26", "api", "schemars"] }
kube = { version = "0.83.0", features = [
    "client",
    "derive",
    "runtime",
    "rustls-tls",
], default-features = false }
schemars = "0.8.12"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.22"
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
