[package]
name = "apibara-dna-protocol"
version = "2.0.0"
description = "Low-level Apibara DNA gRPC types."
readme = "README.md"
homepage = "https://www.apibara.com/docs"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_protocol"
path = "src/lib.rs"

[dependencies]
hex.workspace = true
pin-project.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
snafu.workspace = true
tonic.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
