[package]
name = "apibara-sdk"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
apibara-core = { path = "../core" }
async-trait.workspace = true
color-eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
pin-project.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true

