[package]
name = "apibara-dna-sdk"
version = "2.0.0"
description = "The SDK to connect and stream data from Apibara DNA services."
readme = "README.md"
homepage = "https://www.apibara.com/docs"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_sdk"
path = "src/lib.rs"

[features]
default = ["evm", "starknet"]
evm = []
starknet = []

[dependencies]
apibara-dna-protocol = { path = "../protocol", version = "2.0.0" }
pin-project.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
snafu.workspace = true
