[package]
name = "apibara-sink-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
apibara-core = { path = "../core" }
apibara-sdk = { path = "../sdk" }
apibara-transformer = { path = "../transformer" }
async-trait.workspace = true
bytesize = {version = "1.1.0", features = ["serde"]}
clap.workspace = true
ctrlc.workspace = true
etcd-client = { version = "0.11.1" }
exponential-backoff = "1.2.0"
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
warp.workspace = true
