[package]
name = "apibara-sink-mongo"
version = "0.1.0"
edition = "2021"

[lib]
name = "apibara_sink_mongo"
path = "src/lib.rs"

[[bin]]
name = "apibara-sink-mongo"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.66"
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
apibara-sink-common = { path = "../sink-common" }
async-trait = "0.1.68"
clap = { version = "4.0.32", features = ["env", "unicode", "cargo", "derive"] }
mongodb = "2.5.0"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.36"
