[package]
name = "apibara-sink-mongo"
version = "0.4.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_sink_mongo"
path = "src/lib.rs"

[[bin]]
name = "apibara-sink-mongo"
path = "src/bin.rs"

[dependencies]
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
apibara-sink-common = { path = "../sink-common" }
async-trait.workspace = true
color-eyre.workspace = true
clap.workspace = true
futures-util.workspace = true
mongodb = "2.5.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
futures-util = "0.3.28"
testcontainers.workspace = true
