[package]
name = "apibara-sink-options-derive-tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dev-dependencies]
apibara-sink-common = { path = "../sink-common" }
apibara-sink-options-derive = { path = "../sink-options-derive" }
serde.workspace = true
serde_json.workspace = true
