[package]
name = "apibara-sink-parquet"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_sink_parquet"
path = "src/lib.rs"

[[bin]]
name = "apibara-sink-parquet"
path = "src/bin.rs"

[dependencies]
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
apibara-sink-common = { path = "../sink-common" }
arrow = { version = "41.0.0", default-features = false, features = ["arrow-json", "json"] }
async-trait.workspace = true
color-eyre.workspace = true
clap.workspace = true
parquet = { version = "41.0.0", default-features = false, features = ["arrow", "arrow-array", "arrow-schema"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempdir.workspace = true
